<resources>
    <string name="app_name">UdgDesigner</string>
    <string name="title">UDG Designer App</string>
    <string name="data">DATA:</string>
    <string name="reset">Reset</string>
    <string name="invert">Invert</string>
    <string name="mirror_x">Mirror X</string>
    <string name="mirror_y">Mirror Y</string>
    <string name="calc_data">Data</string>
    <string name="rotate_left">Rotate Left</string>
    <string name="rotate_right">Rotate Right</string>
</resources>